--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Première extension",
+    "name": "Calculatrice",
     "version": "1.0",
     "description": "Calculatrice ",
     "browser_action": {
